--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/ktscannell/quantum-box/issues"
   },
   "homepage": "https://github.com/ktscannell/quantum-box#readme",
-  "dependencies": {
+  "devDependencies": {
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
