--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/ktscannell/quantum-box#readme",
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
